--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "api-platform/api-pack": "^1.2",
         "sensio/framework-extra-bundle": "^5.4",
         "sensiolabs/security-checker": "^6.0",
+        "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
@@ -19,6 +20,7 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/debug-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
